fix section-heading overlap on mobile

--- a/app/scss/base/_utils.scss
+++ b/app/scss/base/_utils.scss
@@ -111,8 +111,7 @@
 
 .section-heading {
   display: grid;
-  grid-template-columns: auto 1fr;
-  grid-template-rows: auto 1fr;
+  grid-template-columns: 1fr auto;
   margin-bottom: 32px;
   column-gap: 24px;
   row-gap: 16px;
@@ -122,7 +121,6 @@
   }
 
   button {
-    justify-self: flex-end;
     align-self: center;
     grid-row: span 2;
   }
